--- a/youtube-toolkit/src/main/resources/application.properties
+++ b/youtube-toolkit/src/main/resources/application.properties
@@ -1,11 +1,21 @@
+
 spring.application.name=youtube-toolkit
-server.port=8080
+#server.port=8080
+
+server.port=${PORT:8080}
+
 
 # Database Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/youtube_toolkit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/youtube_toolkit?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Dhanush@0423
+#spring.datasource.url=jdbc:mysql://localhost:3306/youtube_toolkit?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=Dhanush@0423
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
@@ -15,14 +25,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # YouTube API
-youtube.api.key= AIzaSyB-f7yUJRM99h_b1YKo983eRzYrQl1gJ9M
+youtube.api.key=AIzaSyB-f7yUJRM99h_b1YKo983eRzYrQl1gJ9M
 youtube.api.base-url=https://www.googleapis.com/youtube/v3
-
-# CORS
-cors.allowed-origins=http://localhost:5500,http://127.0.0.1:5500
-logging.level.org.springframework.web.servlet.handler.HandlerMappingIntrospector=ERROR
-
 
 # Logging
 logging.level.com.youtubetoolkit=DEBUG
 logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.web.servlet.handler.HandlerMappingIntrospector=ERROR
