--- a/youtube-toolkit/src/main/resources/application.properties
+++ b/youtube-toolkit/src/main/resources/application.properties
@@ -25,7 +25,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # YouTube API
-youtube.api.key=AIzaSyB-f7yUJRM99h_b1YKo983eRzYrQl1gJ9M
+
+youtube.api.key=${YOUTUBE_API_KEY}
+
+
 youtube.api.base-url=https://www.googleapis.com/youtube/v3
 
 # Logging
