--- a/youtube-toolkit/Dockerfile
+++ b/youtube-toolkit/Dockerfile
@@ -2,10 +2,11 @@ FROM maven:3.9.6-eclipse-temurin-17
 
 WORKDIR /app
 
-COPY . .
+COPY youtube-toolkit /app
 
 RUN mvn clean package -DskipTests
 
 EXPOSE 8080
 
 CMD ["java", "-jar", "target/*.jar"]
+
